--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,11 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+gedi_cache
+gedi_labels
+hls_composites
+hls_cache_hlss30_v2
+gedi_hls_monthly_30m.csv
+hls_gedi_manifest.csv
+.idea
